--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,11 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+
+    <!-- include ngstorage module -->
+    <script src="lib/ngstorage/ngStorage.min.js"></script>
+
+
   </head>
 
   <body ng-app="starter">
